<resources>
    <string name="app_name" translatable="false">Foodie Empire</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="foodie_empire" translatable="false">Foodie Empire</string>
    <string name="cooking_experience_like_a_chef">Cooking experience like a chef</string>
    <string name="create_an_account">Create an account</string>
    <string name="log_in">Log In</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="login">Log In</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="by_creating_an_account_you_agree_to_our_terms_and_conditions_and_agree_to_privacy_policy">By creating an account you agree to our Terms and conditions and agree to privacy policy..</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="please_log_in_to_continue">Please log in to continue..</string>
    <string name="createAccount">Create an account</string>
    <string name="logIn">Log In</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="ingredients">Ingredients</string>
    <string name="avocado">Avocado</string>
    <string name="steps">Steps</string>
    <string name="video_explain_this_recipe_step_by_step">video explain this recipe step by step</string>
    <string name="log_out">Log out</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="favorite_is_empty">Favorite is empty !</string>
    <string name="wlcome">Welcome in Foodie Empire</string>
    <string name="log">Log In</string>
    <string name="crate">Create Account</string>
    <string name="loged">Log In</string>
    <string name="email">\"E-Mail : \"</string>
    <string name="welcom">\"Welcome \"</string>
    <string name="foodie">\" in your Foodie Empire Profile\"</string>

</resources>