<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        app:showAsAction="ifRoom"
        android:title="@string/home" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/favorite"
        app:showAsAction="ifRoom"
        android:title="@string/favorites" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom"
        android:title="@string/search" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/person"
        app:showAsAction="ifRoom"
        android:title="@string/profile" />
</menu>